<resources>
    <string name="app_name">Chef Tools</string>
    <string-array name="categorys_recipes">
        <item>Snacks</item>
        <item>Salads</item>
        <item>Soups</item>
        <item>Paste</item>
        <item>dried beans</item>
        <item>Vegetables</item>
        <item>Meats</item>
        <item>Fish</item>
        <item>Sauces</item>
        <item>Desserts</item>
        <item>Others</item>
    </string-array>
    <string-array name="categorys_products">
        <item>Meat</item>
        <item>Spice</item>
        <item>Fruit</item>
        <item>Pasta</item>
        <item>Vegetables</item>
        <item>Dried pulses</item>
        <item>Pasteleria</item>
        <item>Herbs</item>
        <item>Chemical</item>
        <item>Canned</item>
        <item>Fish</item>
        <item>Seafood</item>
        <item>Dairy</item>
        <item>Sauces</item>
        <item>Winery</item>
        <item>Undefined</item>
    </string-array>
    <string-array name="format_products">
        <item>Units</item>
        <item>Cans</item>
        <item>Bottles</item>
        <item>Litres</item>
        <item>Packages</item>
        <item>.Kg</item>
        <item>.gr</item>
        <item>Rolls</item>
        <item>Bags</item>
        <item>Undefined</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="recipes">Recipes</string>
    <string name="menus">Menus</string>
    <string name="providers">Suppliers</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="inventories">Stocks List</string>
    <string name="recipe_title">Recipe Tittle</string>
    <string name="recipe_category">Recipe Category</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_elaboration">Elaboration</string>
    <string name="recipe_url">Recipe Url</string>
    <string name="add_image">Add Image</string>
    <string name="save">Save</string>
    <string name="searchhint">Text to search...</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="noresults">No results</string>
    <string name="deleterecipetitle">Delete recipes</string>
    <string name="deleterecipesmsg">You want to remove the ### selected items</string>
    <string name="deleteproducttitle">Delete Product</string>
    <string name="deleteproductmsg">You want to remove the selected product?</string>
    <string name="activity_recipes">Chef Recipes</string>
    <string name="activity_newedit">New/Edit Recipe</string>
    <string name="activity_detallerecipe">Details Recipe</string>
    <string name="activity_neweditmenu">New/Edit Menu</string>
    <string name="activity_detallemenu">Details Menu</string>
    <string name="selectpicture">Select Picture</string>
    <string name="urlimage">Write Url Image</string>
    <string name="dlgerror_namerecipe">You must enter a name </string>
    <string name="dlgsucces_saved">Successfully saved!</string>
    <string name="dlgnew_saved">Do you want to edit another?</string>
    <string name="yes">Yes</string>
    <string name="not">No</string>
    <string name="dlgok_update">Ok , Updated Succesfully!</string>
    <string name="menu_edit_recipe">Edit Recipe</string>
    <string name="menu_delete_recipe">Delete Recipe</string>
    <string name="menu_new_recipe">New Recipe</string>
    <string name="menu_image_photo">From Capture</string>
    <string name="menu_image_gallery">From Gallery</string>
    <string name="menu_image_url">From Link</string>
    <string name="search">Search</string>
    <string name="sharerecipe">Share Recipe</string>
    <string name="share_recipe_use">Share with :</string>
    <string name="activity_menus">Menus</string>
    <string name="menu_name">Menu Name</string>
    <string name="menu_entrantes">Snacks</string>
    <string name="menu_primeros">First Courses</string>
    <string name="menu_segundos">Second Courses</string>
    <string name="menu_postres">Desserts</string>
    <string name="comments">Comments</string>
    <string name="share_menu">Share Menu</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="new_menu">New Menu</string>
    <string name="activity_detallesproveedor">Details Supplier</string>
    <string name="activity_providers">Suppliers</string>
    <string name="activity_newedit_provider">Edit/New Supplier</string>
    <string name="activity_newedit_stocks">Edit/New Stock List</string>
    <string name="provider_name">Supplier Name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="menu_edit_provider">Edit Supplier</string>
    <string name="menu_new_provider">New Supplier</string>
    <string name="provider_category">Supplier Category</string>
    <string name="menu_share_supplier">Share Supplier Data</string>
    <string name="email">Email addres</string>
    <string name="activity_detalle_orders">Orders List</string>
    <string name="activity_newedit_orders">New/Edit Order List</string>
    <string name="activity_orders">Orders List</string>
    <string name="order_title">Order List Name</string>
    <string name="menu_new_order">New Orders List Name</string>
    <string name="new_orderslist">New Orders list</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Product Category</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="product_format">Format product</string>
    <string name="none">None</string>
    <string name="products_list">Products List</string>
    <string name="newedit_product">New/Edit Product</string>
    <string name="searchforcategory">Search by category</string>
    <string name="order_list">Orders List</string>
    <string name="add_product">Add Product to the List</string>
    <string name="add_provider_lis">Supplier For this List</string>
    <string name="dlgerror_dataexist">The data already exists</string>
    <string name="order_delete">Delete Order List</string>
    <string name="deleteordermsg">You want remove the list selected?</string>
    <string name="menu_share_order">Share List Orders</string>
    <string name="edit_order">Edit List Orders</string>
    <string name="product_exist">The product already exists in this list</string>
    <string name="admin_cat_pro">Product Categories</string>
    <string name="admin_cat_recipes">Recipes Categories</string>
    <string name="admin_pro_format">Products Format</string>
    <string name="activity_config">Config</string>
    <string name="activity_stoks">Stoks List</string>
    <string name="new_stocklist">New Stock List</string>
    <string name="name_stock_list">Stocks List Name</string>
    <string name="stock_lis">Stocks List</string>
    <string name="menu_new_stock">New Stock List Name</string>
    <string name="stock_title">Stock List Name</string>
    <string name="name">Name</string>
    <string name="backups">BackUps</string>
    <string name="restore_backups_summary">Current data were removed and the selected backup was restored, create a copy if you want to keep them.</string>
    <string name="delete_backup_question">Delete Backup?</string>
    <string name="dialog_backup_restore_ok">Backup Restore!</string>
    <string name="dialog_backup_restore_error">Failed to restore backup</string>
    <string name="dlg_backup_question">You want to create a copy of existing data?</string>
    <string name="actions_backup">Actions Backup</string>
    <string name="delete_provider">Delete Suppliers</string>
    <string name="menu_delete_backup">Delete Backup</string>
    <string name="menu_restore_backup">Restore Backup</string>
    <string name="activity_tools">Tools</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_internet">Internet</string>
    <string name="menu_delete_item">Delete item</string>
    <string name="menu_action_items">Actions For Items</string>
    <string name="deleteitemmsg">You want remove the item selected ### ?</string>
    <string name="created">Created :</string>
    <string name="supplier">Supplier</string>
    <string name="menu_contacts">Contacts</string>
    <string name="add_new">Add New</string>
    <string name="menu_edit_stock">Edit Stock List</string>
    <string name="menu_share_stock">Share Stock List</string>
    <string name="quantity">Quant..</string>
    <string name="back_exit">Press once again to exit!</string>
    <string name="gallery_recipes">Gallery Recipes</string>
    <string name="view_recipe">Show Details Recipe</string>
    <string name="activity_escandallos">Cost Evaluations</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="product_cost">Price for #</string>
    <string name="escandallo_product">Product for cost evaluate</string>
    <string name="product_uni">Product Quantity</string>
    <string name="product_uni_info">(Eixample: 300 = 300gr/300cl, 1000 = 1kg/1Ltr)</string>
    <string name="dlgerror_quantity">You must set a quantity of product</string>
    <string name="dlgerror_costuni">You must specify the price of the product</string>
    <string name="cost_total">Total Cost : </string>
    <string name="product_cost2">Product Cost :</string>
    <string name="format_placeholder">KG</string>
    <string name="share_cost">Share Cost Evaluation</string>
    <string name="share">Share</string>
    <string name="date">Date</string>
    <string name="backup_path">Your backup is located at the root of your root device /ChefTols_Backup</string>
    <string name="white_permission">You declined permission to write files on the device</string>
    <string name="backup_cretaed">Ok, Backup created</string>
    <string name="backup_images_cretaed">Ok, Backup images created</string>
    <string name="backup_error">Backup error</string>
    <string name="backup_images_deleted">Backup of images has ben deleted</string>
    <string name="permission_whrite_failed">You do not have permissions to write files on this device</string>
    <string name="permission_camera_failed">You do not have permission to use the camera on this device</string>
    <string name="activity_detalleescandallo">Detail Cost Evaluation</string>
    <string name="activity_neweditescandallo">New edit Cost Evaluation</string>
    <string name="save_cost">Save cost</string>
    <string name="dlgerror_emptyproducts">There are no products in your cost evaluation</string>
    <string name="Escandallo_name">Cost Evaluation name</string>
    <string name="new_element">Add new</string>
    <string name="new_escandallo">New Cost Evaluation</string>
    <string name="share_escandallo">Share Cost evaluation</string>
    <string name="edit_escandallo">Edit Cost evaluation</string>
    <string name="menu_new_escandallo">Name new cost evaluation</string>

    <string name="productdeleted">Ok, product deleted</string>
</resources>
