<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/stocknamedetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:capitalize="words"
        android:ellipsize="end"
        android:text="@string/name_stock_list"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold|italic" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:layout_marginTop="5dp"
        android:background="@color/textTitletColor" />

    <TextView
        android:id="@+id/titleOrderComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/comments"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:textColor="@color/colorPrimary"
        android:textStyle="normal|italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/textTitletColor" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textComment" />

    <TextView
        android:id="@+id/titleOrderlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stock_lis"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|italic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/textTitletColor" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_items"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:layout_weight="1" />


</LinearLayout>


